--- a/fm/src/app/log-out/log-out.component.html
+++ b/fm/src/app/log-out/log-out.component.html
@@ -3,7 +3,7 @@
 
 <div class="app-container" *ngIf="isLoggedIn">
   <div class="sidebar" [ngClass]="{ expanded: isExpanded }">
-    <div class="header" (click)="navigateTo('home', 'new-Home')">
+    <div class="header" (click)="navigateTo('home', 'new-home')">
       <img src="../assets/images/TVM Infotech Logo.jpg" alt="Logo" />
     </div>
 
