--- a/fm/src/app/app.component.html
+++ b/fm/src/app/app.component.html
@@ -8,7 +8,7 @@
 
   <!-- Sidebar -->
   <div class="sidebar">
-    <div class="header-logo" (click)="navigateTo('home', 'new-Home')">
+    <div class="header-logo" (click)="navigateTo('home', 'new-home')">
       <img src="../assets/images/TVM Infotech Logo.jpg" alt="Logo" />
     </div>
 
@@ -31,17 +31,20 @@
     <div class="top-header">
       <div class="company-title">TVM Infotech Private Limited</div>
 
-      <div class="avatar-section" (click)="toggleDropdown()">
-        <div class="avatar-circle">
-          <span class="initials">{{avatarInitials}}</span>
-        </div>
-        <span class="user-name">{{username}}</span>
+<div class="avatar-section">
+  <div class="avatar-circle" (click)="toggleDropdown($event)">
+    <span class="initials">{{ avatarInitials }}</span>
+  </div>
+  <span class="user-name" (click)="toggleDropdown($event)">{{ username }}</span>
 
-        <!-- Dropdown -->
-        <div class="dropdown-menu" *ngIf="dropdownOpen">
-          <p (click)="logout()">Logout</p>
-        </div>
-      </div>
+  <!-- Dropdown -->
+  <div class="dropdown-menu" *ngIf="dropdownOpen">
+    <p (click)="goToProfile($event)">My Profile</p>
+    <p (click)="logoutClick($event)">Logout</p>
+  </div>
+</div>
+
+
     </div>
 
     <!-- Backdrop & Logout Modal -->
