--- a/fm/src/app/emp-profile/emp-profile.component.html
+++ b/fm/src/app/emp-profile/emp-profile.component.html
@@ -21,7 +21,7 @@
   <div class="profile-section">
     <h4>Personal Details</h4>
     <div class="profile-info">
-      <p><strong>Date of Birth:</strong> {{  profiledata.personalDetails.dateOfBirth }}</p>
+      <p><strong>Date of Birth:</strong> {{  profiledata.personalDetails.dob }}</p>
       <p><strong>Joining Date:</strong> {{ profiledata.workInformation.dateOfJoining }}</p>
       <p><strong>Marital Status:</strong> {{ profiledata.personalDetails.maritalStatus }}</p>
     </div>
