--- a/fm/src/app/home-my-data/particular-emp/particular-emp.component.scss
+++ b/fm/src/app/home-my-data/particular-emp/particular-emp.component.scss
@@ -105,3 +105,25 @@
     }
   }
 }
+.profile-header {
+  display: flex;
+  align-items: center;
+  margin-bottom: 25px;
+}
+
+/* Avatar Circle */
+.avatar-circle {
+  width: 80px;
+  height: 80px;
+  background: #007bff;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 36px;
+  font-weight: bold;
+  border-radius: 50%;
+  margin-right: 20px;
+  text-transform: uppercase;
+  box-shadow: 0px 4px 8px rgba(0,0,0,0.2);
+}
