--- a/fm/src/app/team-list/team-list.component.scss
+++ b/fm/src/app/team-list/team-list.component.scss
@@ -13,7 +13,8 @@
   cursor: pointer;
   transition: 0.3s;
   user-select: none;
-  font-weight: 500;
+ font-weight: bold; 
+  
 }
 
 .team-card:hover {
